latex setup is working

--- a/presentation.Rnw
+++ b/presentation.Rnw
@@ -1,11 +1,14 @@
 \documentclass[10pt]{beamer}
 \usetheme{Warsaw}
 \usepackage{graphicx}
-\usepackage[utf8]{inputenc}
 \usepackage{amsfonts}
+\usepackage{indentfirst}
 \usepackage{amsmath}
 \usepackage[notocbib]{apacite}
-
+\usepackage[polish]{babel}
+\usepackage{polski}
+\usepackage[cp1250]{inputenc}
+\frenchspacing
 
 \setbeamertemplate{caption}{\centering\insertcaption\par}
 \setlength{\belowcaptionskip}{15pt}
@@ -17,14 +20,29 @@
 
 
 \date{}
-\author{Micha\l{}  Burdukiewicz\inst{1}, Piotr Sobczyk\inst{2}, }
+\author{Micha³  Burdukiewicz\inst{1}, Piotr Sobczyk\inst{2}}
 \institute{ 
-\inst{1} University of Wroc\l{}aw, Department of Genomics, Poland
+\inst{1} Zak³ad Genomiki, Uniwersytet Wroc³awski
 \and 
-\inst{2} Wroc\l{}aw University of Technology, Institute of Mathematics and Computer Science, Poland}
+\inst{2} Instytut Matematyki i Informatyki, Politechnika Wroc³awska}
 
-\title{n-grams (k-mers) and hidden semi_Markov models}
+\title{n-gramy w analizie sekwencji biologicznych}
 
+\begin{frame}
+\maketitle
+\end{frame}
+
+\begin{frame}
+\frametitle{Outline}
+\tableofcontents
+\end{frame}
+
+
+
+
+
+
+\section{n-gramy (k-mery)}
 
 \AtBeginSection[]
 {
@@ -34,26 +52,16 @@
 \end{frame}
 }
 
-
-
-\section{n-grams (k-mers)}
-
 \begin{frame}
-n-grams (k-tuples) are vectors of n characters derived from input sequence(s). They may form continuous sub-sequences or be discontinuous.  
-
-
-Important n-gram parameter is its position. Instead of just counting n-grams, one may want to count how many n-grams occur at a given position in multiple (e.g. related) sequences.
-
+n-gramy (k-mery, k-tuple) to wektory o d³ugoœci $n$ zawieraj¹ce znaki z sekwencji wejœciowych.
 
 \end{frame}
 
-
-
 \begin{frame}
 
 
+
 <<echo = FALSE,message=FALSE,results='asis'>>=
-# the echo=5 tells knitr that I want all lines to run but only show #5
 library(reshape2)
 library(ggplot2)
 library(grid)
@@ -64,7 +72,7 @@ set.seed(1)
 sample_seq <- matrix(sample(c("A", "C", "G", "T"), 18, replace = TRUE), nrow = 3)
 colnames(sample_seq) <- paste0("P", 1L:ncol(sample_seq))
 rownames(sample_seq) <- paste0("S", 1L:nrow(sample_seq))
-print(xtable(data.frame(sample_seq), caption = "Sample sequences.  S - sequence, P - position.", digits = 0))
+print(xtable(data.frame(sample_seq), caption = "Przyk³adowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.", digits = 0))
 @
 
 
@@ -74,7 +82,7 @@ unis <- count_ngrams(sample_seq, 1, c("A", "C", "G", "T"))
 unis <- data.frame(as.matrix(unis))
 colnames(unis) <- c("A", "C", "G", "T")
 rownames(unis) <- paste0("S", 1L:nrow(sample_seq))
-print(xtable(unis, caption = "1-gram counts.", digits = 0), include.rownames = TRUE)
+print(xtable(unis, caption = "Zliczenia 1-gramów.", digits = 0), include.rownames = TRUE)
 @
 
 \end{frame}
@@ -94,7 +102,7 @@ set.seed(1)
 sample_seq <- matrix(sample(c("A", "C", "G", "T"), 18, replace = TRUE), nrow = 3)
 colnames(sample_seq) <- paste0("P", 1L:ncol(sample_seq))
 rownames(sample_seq) <- paste0("S", 1L:nrow(sample_seq))
-print(xtable(data.frame(sample_seq), caption = "Sample sequences.  S - sequence, P - position.", digits = 0))
+print(xtable(data.frame(sample_seq), caption = "Przyk³adowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.", digits = 0))
 @
   
 
@@ -108,7 +116,7 @@ colnames(unis) <- sapply(colnames(unis), function(i)
 
 #colnames(unis) <- c("A", "C", "G", "T")
 rownames(unis) <- paste0("S", 1L:nrow(sample_seq))
-print(xtable(unis, caption = "2-gram counts.", digits = 0), include.rownames = TRUE)
+print(xtable(unis[, 1L:8], caption = "Zliczenia 2-gramów (fragment tabeli).", digits = 0), include.rownames = TRUE)
 @
 
 \end{frame}
