--- a/presentation.tex
+++ b/presentation.tex
@@ -53,10 +53,10 @@
 \usepackage{amsfonts}
 \usepackage{indentfirst}
 \usepackage{amsmath}
-\usepackage[notocbib]{apacite}
 \usepackage[polish]{babel}
 \usepackage{polski}
 \usepackage[cp1250]{inputenc}
+\usepackage{natbib}
 \frenchspacing
 
 \setbeamertemplate{caption}{\centering\insertcaption\par}
@@ -106,6 +106,10 @@
 \begin{frame}
 n-gramy (k-mery, k-tuple) to wektory o d³ugoœci $n$ zawieraj¹ce znaki z sekwencji wejœciowych.
 
+\vspace{2cm}
+
+Pierwotnie analiza n-gramów rozwijana by³a na potrzeby analizy jêzyka naturalnego, ale ma równie¿ zastosowania w genomice~\citep{fang2011}, transkryptomice~\citep{wang2014} i proteomice~\citep{guo2014}.
+
 \end{frame}
 
 \begin{frame}
@@ -113,7 +117,7 @@ n-gramy (k-mery, k-tuple) to wektory o d³ugoœci $n$ zawieraj¹ce znaki z sekwencj
 
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Mon May 04 23:18:37 2015
+% Tue May 05 21:38:36 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -132,7 +136,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Mon May 04 23:18:37 2015
+% Tue May 05 21:38:36 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
@@ -153,7 +157,7 @@ S1 & 1 & 2 & 1 & 2 \\
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Mon May 04 23:18:37 2015
+% Tue May 05 21:38:36 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -172,7 +176,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Mon May 04 23:18:37 2015
+% Tue May 05 21:38:36 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -222,7 +226,7 @@ n-gramy mog¹ byæ przypisan¹ informacjê o pozycjach na których wystêpuj¹.
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Mon May 04 23:18:37 2015
+% Tue May 05 21:38:36 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -241,7 +245,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Mon May 04 23:18:37 2015
+% Tue May 05 21:38:36 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -292,7 +296,7 @@ n-gramy mog¹ byæ nieci¹g³e - pomiêdzy elementami n-gramu mog¹ wystêpowaæ przerwy
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Mon May 04 23:18:38 2015
+% Tue May 05 21:38:37 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -311,7 +315,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Mon May 04 23:18:38 2015
+% Tue May 05 21:38:37 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -353,14 +357,51 @@ gdzie $N_{T_P > T_R}$ to liczba losowañ, kiedy $T_P$ (permutowana statystyka tes
 \end{frame}
 
 
-\subsection{n-gramy a ukryte modele Markowa}
+\section{signalHSMM}
+
+\subsection{Peptydy sygna³owe}
 
 \begin{frame}
 
+\begin{figure}[ht]
+        \centering
+        \scalebox{0.4}{
+          \includegraphics{SP.png}
+        }
+\end{figure}
+
+      \begin{itemize}
+        \item n-region: g³ównie zasadowe aminokwasy~\citep{nielsen_prediction_1998},
+        \item h-region: silnie hydrofobowe reszty aminokwasy~\citep{nielsen_prediction_1998},
+        \item c-region: kilka polarnych aminokwasów bez ³adunku~\citep{jain_signal_1994}.
+      \end{itemize}
+
+
+\end{frame}
+
+\begin{frame}
+
+Istnieje szereg programów przewiduj¹cych wystêpowanie peptydu sygna³owego:
+\begin{itemize}
+\item signalP 4.1 (sieci neuronowe)~\cite{petersen_signalp_2011},
+\item PrediSi (Position Weight Matrix)~\cite{hiller_predisi:_2004},
+\item Signal-3L (k-najbliszych s¹siadów)~\cite{shen_signal-3l:_2007},
+\item Phobius (ukryte modele Markowa)~\cite{kall_combined_2004}.
+\end{itemize}
 
 
 \end{frame}
 
 
+
+\begin{frame}
+
+\tiny{
+      \bibliographystyle{apalike}
+      \bibliography{amyloid_present}
+    }
+
+
+\end{frame}
 
 \end{document}
