--- a/presentation.Rnw
+++ b/presentation.Rnw
@@ -6,8 +6,22 @@
 \usepackage{amsmath}
 \usepackage[polish]{babel}
 \usepackage{polski}
-\usepackage[cp1250]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage{natbib}
+
+
+\usepackage{tikz}
+\usepackage{ifthen}
+\usepackage{xxcolor}
+\usetikzlibrary{arrows}
+\usetikzlibrary[topaths]
+\usetikzlibrary{decorations.pathreplacing}
+%\usepackage{times}\usefonttheme{professionalfonts}  % times is obsolete
+\usefonttheme[onlymath]{serif}
+\boldmath
+
+
+
 \frenchspacing
 
 \setbeamertemplate{caption}{\centering\insertcaption\par}
@@ -20,11 +34,11 @@
 
 
 \date{}
-\author{Micha≥  Burdukiewicz\inst{1}, Piotr Sobczyk\inst{2}}
+\author{Micha≈Ç  Burdukiewicz\inst{1}, Piotr Sobczyk\inst{2}, Pawe≈Ç Mackiewicz\inst{1}}
 \institute{ 
-\inst{1} Zak≥ad Genomiki, Uniwersytet Wroc≥awski
+\inst{1} Zak≈Çad Genomiki, Uniwersytet Wroc≈Çawski
 \and 
-\inst{2} Instytut Matematyki i Informatyki, Politechnika Wroc≥awska}
+\inst{2} Instytut Matematyki i Informatyki, Politechnika Wroc≈Çawska}
 
 \title{n-gramy w analizie sekwencji biologicznych}
 
@@ -55,11 +69,11 @@
 }
 
 \begin{frame}
-n-gramy (k-mery, k-tuple) to wektory o d≥ugoúci $n$ zawierajπce znaki z sekwencji wejúciowych.
+n-gramy (k-mery, k-tuple) to wektory o d≈Çugo≈õci $n$ zawierajƒÖce znaki z sekwencji wej≈õciowych.
 
 \vspace{2cm}
 
-Pierwotnie analiza n-gramÛw rozwijana by≥a na potrzeby analizy jÍzyka naturalnego, ale ma rÛwnieø zastosowania w genomice~\citep{fang2011}, transkryptomice~\citep{wang2014} i proteomice~\citep{guo2014}.
+Pierwotnie analiza n-gram√≥w rozwijana by≈Ça na potrzeby analizy jƒôzyka naturalnego, ale ma r√≥wnie≈º zastosowania w genomice~\citep{fang2011}, transkryptomice~\citep{wang2014} i proteomice~\citep{guo2014}.
 
 \end{frame}
 
@@ -78,7 +92,7 @@ set.seed(1)
 sample_seq <- matrix(sample(c("A", "C", "G", "T"), 18, replace = TRUE), nrow = 3)
 colnames(sample_seq) <- paste0("P", 1L:ncol(sample_seq))
 rownames(sample_seq) <- paste0("S", 1L:nrow(sample_seq))
-print(xtable(data.frame(sample_seq), caption = "Przyk≥adowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.", digits = 0))
+print(xtable(data.frame(sample_seq), caption = "Przyk≈Çadowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.", digits = 0))
 @
 
 
@@ -88,7 +102,7 @@ unis <- count_ngrams(sample_seq, 1, c("A", "C", "G", "T"))
 unis <- data.frame(as.matrix(unis))
 colnames(unis) <- c("A", "C", "G", "T")
 rownames(unis) <- paste0("S", 1L:nrow(sample_seq))
-print(xtable(unis, caption = "Zliczenia 1-gramÛw.", digits = 0), include.rownames = TRUE)
+print(xtable(unis, caption = "Zliczenia 1-gram√≥w.", digits = 0), include.rownames = TRUE)
 @
 
 \end{frame}
@@ -121,7 +135,7 @@ set.seed(1)
 sample_seq <- matrix(sample(c("A", "C", "G", "T"), 18, replace = TRUE), nrow = 3)
 colnames(sample_seq) <- paste0("P", 1L:ncol(sample_seq))
 rownames(sample_seq) <- paste0("S", 1L:nrow(sample_seq))
-print(xtable(data.frame(sample_seq), caption = "Przyk≥adowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.", digits = 0))
+print(xtable(data.frame(sample_seq), caption = "Przyk≈Çadowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.", digits = 0))
 @
   
 
@@ -135,7 +149,7 @@ colnames(unis) <- sapply(colnames(unis), function(i)
 
 #colnames(unis) <- c("A", "C", "G", "T")
 rownames(unis) <- paste0("S", 1L:nrow(sample_seq))
-print(xtable(unis[, 1L:8], caption = "Zliczenia 2-gramÛw (fragment tabeli).", digits = 0), include.rownames = TRUE)
+print(xtable(unis[, 1L:8], caption = "Zliczenia 2-gram√≥w (fragment tabeli).", digits = 0), include.rownames = TRUE)
 @
 
 \end{frame}
@@ -143,11 +157,11 @@ print(xtable(unis[, 1L:8], caption = "Zliczenia 2-gramÛw (fragment tabeli).", di
 \begin{frame}
 $$n_\text{max} = u^n$$
 
-$n_\text{max}$: liczba wszystkich moøliwych n-gramÛw
+$n_\text{max}$: liczba wszystkich mo≈ºliwych n-gram√≥w
 
 $u$: liczba liter w alfabecie.
 
-$n$: d≥ugoúÊ n-gramu
+$n$: d≈Çugo≈õƒá n-gramu
 
 \end{frame}
 
@@ -173,7 +187,7 @@ ggplot(dat, aes(x = n, y = n_max)) +
 
 \begin{frame}
 
-n-gramy mogπ byÊ przypisanπ informacjÍ o pozycjach na ktÛrych wystÍpujπ.
+n-gramy mogƒÖ byƒá przypisanƒÖ informacjƒô o pozycjach na kt√≥rych wystƒôpujƒÖ.
 
 \end{frame}
 
@@ -181,7 +195,7 @@ n-gramy mogπ byÊ przypisanπ informacjÍ o pozycjach na ktÛrych wystÍpujπ.
 \begin{frame}
 
 <<echo = FALSE,message=FALSE,results='asis'>>=
-print(xtable(data.frame(sample_seq), caption = "Przyk≥adowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.", digits = 0))
+print(xtable(data.frame(sample_seq), caption = "Przyk≈Çadowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.", digits = 0))
 @
   
 
@@ -194,7 +208,7 @@ colnames(unis) <- substr(colnames(unis), 2, 6)
 
 #colnames(unis) <- c("A", "C", "G", "T")
 rownames(unis) <- paste0("S", 1L:nrow(sample_seq))
-print(xtable(unis[, 1L:8], caption = "Zliczenia 2-gramÛw z informacjπ o pozycji (fragment tabeli).", digits = 0), include.rownames = TRUE)
+print(xtable(unis[, 1L:8], caption = "Zliczenia 2-gram√≥w z informacjƒÖ o pozycji (fragment tabeli).", digits = 0), include.rownames = TRUE)
 @
 
 \end{frame}
@@ -202,13 +216,13 @@ print(xtable(unis[, 1L:8], caption = "Zliczenia 2-gramÛw z informacjπ o pozycji 
 \begin{frame}
 $$n_\text{max} = p \times u^n$$
 
-$n_\text{max}$: liczba wszystkich moøliwych n-gramÛw
+$n_\text{max}$: liczba wszystkich mo≈ºliwych n-gram√≥w
 
-$p$: liczba moøliwych pozycji.
+$p$: liczba mo≈ºliwych pozycji.
 
 $u$: liczba liter w alfabecie.
 
-$n$: d≥ugoúÊ n-gramu
+$n$: d≈Çugo≈õƒá n-gramu
 
 \end{frame}
 
@@ -229,11 +243,11 @@ ggplot(dat, aes(x = n, y = n_max, fill = p, col = p)) +
 @
 \end{frame}
 
-\subsection{Nieciπg≥e n-gramy}
+\subsection{NieciƒÖg≈Çe n-gramy}
 
 \begin{frame}
 
-n-gramy mogπ byÊ nieciπg≥e - pomiÍdzy elementami n-gramu mogπ wystÍpowaÊ przerwy.
+n-gramy mogƒÖ byƒá nieciƒÖg≈Çe - pomiƒôdzy elementami n-gramu mogƒÖ wystƒôpowaƒá przerwy.
 
 \end{frame}
 
@@ -241,7 +255,7 @@ n-gramy mogπ byÊ nieciπg≥e - pomiÍdzy elementami n-gramu mogπ wystÍpowaÊ przerwy
 \begin{frame}
 
 <<echo = FALSE,message=FALSE,results='asis'>>=
-print(xtable(data.frame(sample_seq), caption = "Przyk≥adowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.", digits = 0))
+print(xtable(data.frame(sample_seq), caption = "Przyk≈Çadowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.", digits = 0))
 @
   
 
@@ -254,21 +268,21 @@ colnames(unis) <- decode_ngrams(colnames(unis))
 
 #colnames(unis) <- c("A", "C", "G", "T")
 rownames(unis) <- paste0("S", 1L:nrow(sample_seq))
-print(xtable(unis[, 1L:8], caption = "Zliczenia 2-gramÛw z przerwπ 1 (fragment tabeli).", digits = 0), include.rownames = TRUE)
+print(xtable(unis[, 1L:8], caption = "Zliczenia 2-gram√≥w z przerwƒÖ 1 (fragment tabeli).", digits = 0), include.rownames = TRUE)
 @
 
 \end{frame}
 
-\subsection{WybÛr informatywnych n-gramÛw - QuiPT}
+\subsection{Wyb√≥r informatywnych n-gram√≥w - QuiPT}
 
 \begin{frame}
 
-Wielowymiarowa przestrzeÒ atrybutÛw jest filtrowana z pomocπ QuiPT (\textbf{Qui}ck \textbf{P}ermutation \textbf{T}est) ≥πczπcego zalety testÛw permutacyjnych (brak za≥oøeÒ) z szybkoúciπ wykonania.
+Wielowymiarowa przestrze≈Ñ atrybut√≥w jest filtrowana z pomocƒÖ QuiPT (\textbf{Qui}ck \textbf{P}ermutation \textbf{T}est) ≈ÇƒÖczƒÖcego zalety test√≥w permutacyjnych (brak za≈Ço≈ºe≈Ñ) z szybko≈õciƒÖ wykonania.
 
 \end{frame}
 
 \begin{frame}
-W trakcie testu permutacyjnego oznaczenia klas sπ losowo mieszane na potrzeby obliczania statystyki testowej.
+W trakcie testu permutacyjnego oznaczenia klas sƒÖ losowo mieszane na potrzeby obliczania statystyki testowej.
     
 \begin{center}
 \scalebox{0.85}{
@@ -278,14 +292,14 @@ $
 }
 \end{center}
 
-gdzie $N_{T_P > T_R}$ to liczba losowaÒ, kiedy $T_P$ (permutowana statystyka testowa) mia≥a wartoúÊ krytyczniejszπ niø $T_R$ (statystyka testowa dla niepermutowanych danych).
+gdzie $N_{T_P > T_R}$ to liczba losowa≈Ñ, kiedy $T_P$ (permutowana statystyka testowa) mia≈Ça warto≈õƒá krytyczniejszƒÖ ni≈º $T_R$ (statystyka testowa dla niepermutowanych danych).
       
 \end{frame}
 
 
 \section{signalHSMM}
 
-\subsection{Peptydy sygna≥owe}
+\subsection{Peptydy sygna≈Çowe}
 
 \begin{frame}
 
@@ -297,9 +311,9 @@ gdzie $N_{T_P > T_R}$ to liczba losowaÒ, kiedy $T_P$ (permutowana statystyka tes
 \end{figure}
 
       \begin{itemize}
-        \item n-region: g≥Ûwnie zasadowe aminokwasy~\citep{nielsen_prediction_1998},
+        \item n-region: g≈Ç√≥wnie zasadowe aminokwasy~\citep{nielsen_prediction_1998},
         \item h-region: silnie hydrofobowe reszty aminokwasy~\citep{nielsen_prediction_1998},
-        \item c-region: kilka polarnych aminokwasÛw bez ≥adunku~\citep{jain_signal_1994}.
+        \item c-region: kilka polarnych aminokwas√≥w bez ≈Çadunku~\citep{jain_signal_1994}.
       \end{itemize}
 
 
@@ -307,16 +321,68 @@ gdzie $N_{T_P > T_R}$ to liczba losowaÒ, kiedy $T_P$ (permutowana statystyka tes
 
 \begin{frame}
 
-Istnieje szereg programÛw przewidujπcych wystÍpowanie peptydu sygna≥owego:
+Istnieje szereg program√≥w przewidujƒÖcych wystƒôpowanie peptydu sygna≈Çowego:
 \begin{itemize}
-\item signalP 4.1 (sieci neuronowe)~\cite{petersen_signalp_2011},
-\item PrediSi (Position Weight Matrix)~\cite{hiller_predisi:_2004},
-\item Signal-3L (k-najbliszych sπsiadÛw)~\cite{shen_signal-3l:_2007},
-\item Phobius (ukryte modele Markowa)~\cite{kall_combined_2004}.
+\item signalP 4.1 (sieci neuronowe)~\citep{petersen_signalp_2011},
+\item PrediSi (Position Weight Matrix)~\citep{hiller_predisi:_2004},
+\item Signal-3L (k-najbliszych sƒÖsiad√≥w)~\citep{shen_signal-3l:_2007},
+\item Phobius (ukryte modele Markowa)~\citep{kall_combined_2004}.
 \end{itemize}
 
-
 \end{frame}
+
+\subsection{Ukryte modele semi-Markowa}
+
+
+\begin{frame}
+      Za≈Ço≈ºenia modelu:
+      \begin{itemize}
+        \item obserwowany rozk≈Çad aminokas√≥w jest wynika z przebywania w okre≈õlonym regionie (stanie),
+        \item d≈Çugo≈õƒá regionu (czas trwania stanu) jest modelowana poprzez rozk≈Çad prawdopodobie≈Ñstwa (inny ni≈º rozk≈Çad geometryczny jak w ukrytych modelach Markowa).
+      \end{itemize}
+    \end{frame}
+
+    
+    \begin{frame}
+      \begin{enumerate}[1.]
+        \item Pozyskanie eukariotycznych bia≈Çek z bazy UniProtKB 2014\_07 (po ocyszczeniu z nietypowych lub niedok≈Çadnie opisanych rekord√≥w zbi√≥r danych liczy 3816 bia≈Çek z peptydem sygna≈Çowym i 9795 bia≈Çek bez peptydu sygna≈Çowego),
+        \item okre≈õlenie granic n-, h- i c-region√≥w przez algorytm heurystyczny,
+        \item redukcja wymiarowo≈õci problemu poprzez zagregowanie aminokwas√≥w na podstawie ich w≈Ça≈õciwo≈õci fizykochemicznych do kilku grup,
+        \item obliczenie czƒôsto≈õci wystƒôpowania grup aminokwasowych w danych regionie oraz d≈Çugo≈õci region√≥w,
+        \item uczenie dw√≥ch HSMM dla bia≈Çek z peptydem sygna≈Çowym i bez peptydu sygna≈Çowego.
+      \end{enumerate} 
+    \end{frame}
+
+
+
+\begin{frame}
+    Podczas testowania, ka≈ºde bia≈Çko jest dopasowane do dw√≥ch HSMM, kt√≥re modelujƒÖ odpowiednio bia≈Çka bez peptydu sygna≈Çowego i z peptydem sygna≈Çowym. Prawdopodobie≈Ñstwo obu dopasowa≈Ñ stanowiƒÖ wynik dzia≈Çania programu.
+    \begin{figure}
+    \centering
+    \resizebox{8.5cm}{!}{%
+    \begin{tikzpicture}[->,>=stealth',shorten >=2pt,auto,node distance=4.5cm, thick]
+      \tikzstyle{line} = [draw=black, color=blue!30!black!50, line width=4.5mm, -latex']
+      \tikzstyle{main node} = [circle,fill=blue!20,draw, minimum size = 2.2cm, font=\itshape,
+         align=center,  top color=white, bottom color=blue!50!black!70 ] %font=\sffamily\small\bfseries,
+      %nodes
+      \node[main node]            (start') 	[]						{Start};	     
+      \node[main node, bottom color=purple!70!black!70] 	(nregion') 	[right of=start',xshift=-5mm, yshift=15mm] 	{n-region};
+      \node[main node, bottom color=pink!70!black!70] 	(hregion') 	[right of=nregion',xshift=-5mm,yshift=15mm] 	{h-region};
+      \node[main node, bottom color=gray!70!black!70] 	(cregion') 	[right of=hregion',xshift=-5mm,yshift=-15mm] 	{c-region};
+      \node[main node, bottom color=green!70!black!70] 	(mature') 	[right of=cregion',xshift=-5mm, yshift=-15mm] 	{Mature protein};
+      
+      %lines
+      \path [line] (start')   edge node [left, color=black] {} (nregion');
+      \path [line] (nregion') edge node [below, color=black] { } (hregion');
+      \path [line] (hregion') edge node [below, color=black] { } (cregion');
+      \path [line] (cregion') edge node [left, color=black] { } (mature');
+      \draw [line] (start') to[out=340,in=200] (mature');
+    \end{tikzpicture} }
+    \end{figure}
+
+
+    \end{frame}
+
 
 
 
