--- a/presentation.tex
+++ b/presentation.tex
@@ -55,8 +55,22 @@
 \usepackage{amsmath}
 \usepackage[polish]{babel}
 \usepackage{polski}
-\usepackage[cp1250]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage{natbib}
+
+
+\usepackage{tikz}
+\usepackage{ifthen}
+\usepackage{xxcolor}
+\usetikzlibrary{arrows}
+\usetikzlibrary[topaths]
+\usetikzlibrary{decorations.pathreplacing}
+%\usepackage{times}\usefonttheme{professionalfonts}  % times is obsolete
+\usefonttheme[onlymath]{serif}
+\boldmath
+
+
+
 \frenchspacing
 
 \setbeamertemplate{caption}{\centering\insertcaption\par}
@@ -69,11 +83,11 @@
 
 
 \date{}
-\author{Micha³  Burdukiewicz\inst{1}, Piotr Sobczyk\inst{2}}
+\author{MichaÅ‚  Burdukiewicz\inst{1}, Piotr Sobczyk\inst{2}, PaweÅ‚ Mackiewicz\inst{1}}
 \institute{ 
-\inst{1} Zak³ad Genomiki, Uniwersytet Wroc³awski
+\inst{1} ZakÅ‚ad Genomiki, Uniwersytet WrocÅ‚awski
 \and 
-\inst{2} Instytut Matematyki i Informatyki, Politechnika Wroc³awska}
+\inst{2} Instytut Matematyki i Informatyki, Politechnika WrocÅ‚awska}
 
 \title{n-gramy w analizie sekwencji biologicznych}
 
@@ -104,11 +118,11 @@
 }
 
 \begin{frame}
-n-gramy (k-mery, k-tuple) to wektory o d³ugoœci $n$ zawieraj¹ce znaki z sekwencji wejœciowych.
+n-gramy (k-mery, k-tuple) to wektory o dÅ‚ugoÅ›ci $n$ zawierajÄ…ce znaki z sekwencji wejÅ›ciowych.
 
 \vspace{2cm}
 
-Pierwotnie analiza n-gramów rozwijana by³a na potrzeby analizy jêzyka naturalnego, ale ma równie¿ zastosowania w genomice~\citep{fang2011}, transkryptomice~\citep{wang2014} i proteomice~\citep{guo2014}.
+Pierwotnie analiza n-gramÃ³w rozwijana byÅ‚a na potrzeby analizy jÄ™zyka naturalnego, ale ma rÃ³wnieÅ¼ zastosowania w genomice~\citep{fang2011}, transkryptomice~\citep{wang2014} i proteomice~\citep{guo2014}.
 
 \end{frame}
 
@@ -117,7 +131,7 @@ Pierwotnie analiza n-gramów rozwijana by³a na potrzeby analizy jêzyka naturalneg
 
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Tue May 05 21:38:36 2015
+% Wed May  6 09:37:40 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -129,14 +143,14 @@ S1 & C & T & T & A & G & C \\
   S3 & G & T & G & A & T & T \\ 
    \hline
 \end{tabular}
-\caption{Przyk³adowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.} 
+\caption{PrzykÅ‚adowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.} 
 \end{table}
 
 
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Tue May 05 21:38:36 2015
+% Wed May  6 09:37:40 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
@@ -148,7 +162,7 @@ S1 & 1 & 2 & 1 & 2 \\
   S3 & 1 & 0 & 2 & 3 \\ 
    \hline
 \end{tabular}
-\caption{Zliczenia 1-gramów.} 
+\caption{Zliczenia 1-gramÃ³w.} 
 \end{table}
 
 
@@ -157,7 +171,7 @@ S1 & 1 & 2 & 1 & 2 \\
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Tue May 05 21:38:36 2015
+% Wed May  6 09:37:40 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -169,14 +183,14 @@ S1 & C & T & T & A & G & C \\
   S3 & G & T & G & A & T & T \\ 
    \hline
 \end{tabular}
-\caption{Przyk³adowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.} 
+\caption{PrzykÅ‚adowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.} 
 \end{table}
 
   
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Tue May 05 21:38:36 2015
+% Wed May  6 09:37:40 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -188,7 +202,7 @@ S1 & 0 & 0 & 0 & 1 & 0 & 0 & 1 & 0 \\
   S3 & 0 & 0 & 1 & 0 & 0 & 0 & 0 & 0 \\ 
    \hline
 \end{tabular}
-\caption{Zliczenia 2-gramów (fragment tabeli).} 
+\caption{Zliczenia 2-gramÃ³w (fragment tabeli).} 
 \end{table}
 
 
@@ -197,11 +211,11 @@ S1 & 0 & 0 & 0 & 1 & 0 & 0 & 1 & 0 \\
 \begin{frame}
 $$n_\text{max} = u^n$$
 
-$n_\text{max}$: liczba wszystkich mo¿liwych n-gramów
+$n_\text{max}$: liczba wszystkich moÅ¼liwych n-gramÃ³w
 
 $u$: liczba liter w alfabecie.
 
-$n$: d³ugoœæ n-gramu
+$n$: dÅ‚ugoÅ›Ä‡ n-gramu
 
 \end{frame}
 
@@ -218,7 +232,7 @@ $n$: d³ugoœæ n-gramu
 
 \begin{frame}
 
-n-gramy mog¹ byæ przypisan¹ informacjê o pozycjach na których wystêpuj¹.
+n-gramy mogÄ… byÄ‡ przypisanÄ… informacjÄ™ o pozycjach na ktÃ³rych wystÄ™pujÄ….
 
 \end{frame}
 
@@ -226,7 +240,7 @@ n-gramy mog¹ byæ przypisan¹ informacjê o pozycjach na których wystêpuj¹.
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Tue May 05 21:38:36 2015
+% Wed May  6 09:37:40 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -238,14 +252,14 @@ S1 & C & T & T & A & G & C \\
   S3 & G & T & G & A & T & T \\ 
    \hline
 \end{tabular}
-\caption{Przyk³adowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.} 
+\caption{PrzykÅ‚adowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.} 
 \end{table}
 
   
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Tue May 05 21:38:36 2015
+% Wed May  6 09:37:40 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -257,7 +271,7 @@ S1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
   S3 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\ 
    \hline
 \end{tabular}
-\caption{Zliczenia 2-gramów z informacj¹ o pozycji (fragment tabeli).} 
+\caption{Zliczenia 2-gramÃ³w z informacjÄ… o pozycji (fragment tabeli).} 
 \end{table}
 
 
@@ -266,13 +280,13 @@ S1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
 \begin{frame}
 $$n_\text{max} = p \times u^n$$
 
-$n_\text{max}$: liczba wszystkich mo¿liwych n-gramów
+$n_\text{max}$: liczba wszystkich moÅ¼liwych n-gramÃ³w
 
-$p$: liczba mo¿liwych pozycji.
+$p$: liczba moÅ¼liwych pozycji.
 
 $u$: liczba liter w alfabecie.
 
-$n$: d³ugoœæ n-gramu
+$n$: dÅ‚ugoÅ›Ä‡ n-gramu
 
 \end{frame}
 
@@ -284,11 +298,11 @@ $n$: d³ugoœæ n-gramu
 
 \end{frame}
 
-\subsection{Nieci¹g³e n-gramy}
+\subsection{NieciÄ…gÅ‚e n-gramy}
 
 \begin{frame}
 
-n-gramy mog¹ byæ nieci¹g³e - pomiêdzy elementami n-gramu mog¹ wystêpowaæ przerwy.
+n-gramy mogÄ… byÄ‡ nieciÄ…gÅ‚e - pomiÄ™dzy elementami n-gramu mogÄ… wystÄ™powaÄ‡ przerwy.
 
 \end{frame}
 
@@ -296,7 +310,7 @@ n-gramy mog¹ byæ nieci¹g³e - pomiêdzy elementami n-gramu mog¹ wystêpowaæ przerwy
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Tue May 05 21:38:37 2015
+% Wed May  6 09:37:41 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -308,14 +322,14 @@ S1 & C & T & T & A & G & C \\
   S3 & G & T & G & A & T & T \\ 
    \hline
 \end{tabular}
-\caption{Przyk³adowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.} 
+\caption{PrzykÅ‚adowe sekwencje.  S - sekwencje, P - pozycja nukleotydu.} 
 \end{table}
 
   
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Tue May 05 21:38:37 2015
+% Wed May  6 09:37:41 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -327,22 +341,22 @@ S1 & 0 & 0 & 0 & 1 & 1 & 0 & 0 & 0 \\
   S3 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & 0 \\ 
    \hline
 \end{tabular}
-\caption{Zliczenia 2-gramów z przerw¹ 1 (fragment tabeli).} 
+\caption{Zliczenia 2-gramÃ³w z przerwÄ… 1 (fragment tabeli).} 
 \end{table}
 
 
 \end{frame}
 
-\subsection{Wybór informatywnych n-gramów - QuiPT}
+\subsection{WybÃ³r informatywnych n-gramÃ³w - QuiPT}
 
 \begin{frame}
 
-Wielowymiarowa przestrzeñ atrybutów jest filtrowana z pomoc¹ QuiPT (\textbf{Qui}ck \textbf{P}ermutation \textbf{T}est) ³¹cz¹cego zalety testów permutacyjnych (brak za³o¿eñ) z szybkoœci¹ wykonania.
+Wielowymiarowa przestrzeÅ„ atrybutÃ³w jest filtrowana z pomocÄ… QuiPT (\textbf{Qui}ck \textbf{P}ermutation \textbf{T}est) Å‚Ä…czÄ…cego zalety testÃ³w permutacyjnych (brak zaÅ‚oÅ¼eÅ„) z szybkoÅ›ciÄ… wykonania.
 
 \end{frame}
 
 \begin{frame}
-W trakcie testu permutacyjnego oznaczenia klas s¹ losowo mieszane na potrzeby obliczania statystyki testowej.
+W trakcie testu permutacyjnego oznaczenia klas sÄ… losowo mieszane na potrzeby obliczania statystyki testowej.
     
 \begin{center}
 \scalebox{0.85}{
@@ -352,14 +366,14 @@ $
 }
 \end{center}
 
-gdzie $N_{T_P > T_R}$ to liczba losowañ, kiedy $T_P$ (permutowana statystyka testowa) mia³a wartoœæ krytyczniejsz¹ ni¿ $T_R$ (statystyka testowa dla niepermutowanych danych).
+gdzie $N_{T_P > T_R}$ to liczba losowaÅ„, kiedy $T_P$ (permutowana statystyka testowa) miaÅ‚a wartoÅ›Ä‡ krytyczniejszÄ… niÅ¼ $T_R$ (statystyka testowa dla niepermutowanych danych).
       
 \end{frame}
 
 
 \section{signalHSMM}
 
-\subsection{Peptydy sygna³owe}
+\subsection{Peptydy sygnaÅ‚owe}
 
 \begin{frame}
 
@@ -371,9 +385,9 @@ gdzie $N_{T_P > T_R}$ to liczba losowañ, kiedy $T_P$ (permutowana statystyka tes
 \end{figure}
 
       \begin{itemize}
-        \item n-region: g³ównie zasadowe aminokwasy~\citep{nielsen_prediction_1998},
+        \item n-region: gÅ‚Ã³wnie zasadowe aminokwasy~\citep{nielsen_prediction_1998},
         \item h-region: silnie hydrofobowe reszty aminokwasy~\citep{nielsen_prediction_1998},
-        \item c-region: kilka polarnych aminokwasów bez ³adunku~\citep{jain_signal_1994}.
+        \item c-region: kilka polarnych aminokwasÃ³w bez Å‚adunku~\citep{jain_signal_1994}.
       \end{itemize}
 
 
@@ -381,16 +395,68 @@ gdzie $N_{T_P > T_R}$ to liczba losowañ, kiedy $T_P$ (permutowana statystyka tes
 
 \begin{frame}
 
-Istnieje szereg programów przewiduj¹cych wystêpowanie peptydu sygna³owego:
+Istnieje szereg programÃ³w przewidujÄ…cych wystÄ™powanie peptydu sygnaÅ‚owego:
 \begin{itemize}
-\item signalP 4.1 (sieci neuronowe)~\cite{petersen_signalp_2011},
-\item PrediSi (Position Weight Matrix)~\cite{hiller_predisi:_2004},
-\item Signal-3L (k-najbliszych s¹siadów)~\cite{shen_signal-3l:_2007},
-\item Phobius (ukryte modele Markowa)~\cite{kall_combined_2004}.
+\item signalP 4.1 (sieci neuronowe)~\citep{petersen_signalp_2011},
+\item PrediSi (Position Weight Matrix)~\citep{hiller_predisi:_2004},
+\item Signal-3L (k-najbliszych sÄ…siadÃ³w)~\citep{shen_signal-3l:_2007},
+\item Phobius (ukryte modele Markowa)~\citep{kall_combined_2004}.
 \end{itemize}
 
-
 \end{frame}
+
+\subsection{Ukryte modele semi-Markowa}
+
+
+\begin{frame}
+      ZaÅ‚oÅ¼enia modelu:
+      \begin{itemize}
+        \item obserwowany rozkÅ‚ad aminokasÃ³w jest wynika z przebywania w okreÅ›lonym regionie (stanie),
+        \item dÅ‚ugoÅ›Ä‡ regionu (czas trwania stanu) jest modelowana poprzez rozkÅ‚ad prawdopodobieÅ„stwa (inny niÅ¼ rozkÅ‚ad geometryczny jak w ukrytych modelach Markowa).
+      \end{itemize}
+    \end{frame}
+
+    
+    \begin{frame}
+      \begin{enumerate}[1.]
+        \item Pozyskanie eukariotycznych biaÅ‚ek z bazy UniProtKB 2014\_07 (po ocyszczeniu z nietypowych lub niedokÅ‚adnie opisanych rekordÃ³w zbiÃ³r danych liczy 3816 biaÅ‚ek z peptydem sygnaÅ‚owym i 9795 biaÅ‚ek bez peptydu sygnaÅ‚owego),
+        \item okreÅ›lenie granic n-, h- i c-regionÃ³w przez algorytm heurystyczny,
+        \item redukcja wymiarowoÅ›ci problemu poprzez zagregowanie aminokwasÃ³w na podstawie ich wÅ‚aÅ›ciwoÅ›ci fizykochemicznych do kilku grup,
+        \item obliczenie czÄ™stoÅ›ci wystÄ™powania grup aminokwasowych w danych regionie oraz dÅ‚ugoÅ›ci regionÃ³w,
+        \item uczenie dwÃ³ch HSMM dla biaÅ‚ek z peptydem sygnaÅ‚owym i bez peptydu sygnaÅ‚owego.
+      \end{enumerate} 
+    \end{frame}
+
+
+
+\begin{frame}
+    Podczas testowania, kaÅ¼de biaÅ‚ko jest dopasowane do dwÃ³ch HSMM, ktÃ³re modelujÄ… odpowiednio biaÅ‚ka bez peptydu sygnaÅ‚owego i z peptydem sygnaÅ‚owym. PrawdopodobieÅ„stwo obu dopasowaÅ„ stanowiÄ… wynik dziaÅ‚ania programu.
+    \begin{figure}
+    \centering
+    \resizebox{8.5cm}{!}{%
+    \begin{tikzpicture}[->,>=stealth',shorten >=2pt,auto,node distance=4.5cm, thick]
+      \tikzstyle{line} = [draw=black, color=blue!30!black!50, line width=4.5mm, -latex']
+      \tikzstyle{main node} = [circle,fill=blue!20,draw, minimum size = 2.2cm, font=\itshape,
+         align=center,  top color=white, bottom color=blue!50!black!70 ] %font=\sffamily\small\bfseries,
+      %nodes
+      \node[main node]            (start') 	[]						{Start};	     
+      \node[main node, bottom color=purple!70!black!70] 	(nregion') 	[right of=start',xshift=-5mm, yshift=15mm] 	{n-region};
+      \node[main node, bottom color=pink!70!black!70] 	(hregion') 	[right of=nregion',xshift=-5mm,yshift=15mm] 	{h-region};
+      \node[main node, bottom color=gray!70!black!70] 	(cregion') 	[right of=hregion',xshift=-5mm,yshift=-15mm] 	{c-region};
+      \node[main node, bottom color=green!70!black!70] 	(mature') 	[right of=cregion',xshift=-5mm, yshift=-15mm] 	{Mature protein};
+      
+      %lines
+      \path [line] (start')   edge node [left, color=black] {} (nregion');
+      \path [line] (nregion') edge node [below, color=black] { } (hregion');
+      \path [line] (hregion') edge node [below, color=black] { } (cregion');
+      \path [line] (cregion') edge node [left, color=black] { } (mature');
+      \draw [line] (start') to[out=340,in=200] (mature');
+    \end{tikzpicture} }
+    \end{figure}
+
+
+    \end{frame}
+
 
 
 
