drafted signalHSMM section, started amyloid section

--- a/amyloid_present.bib
+++ b/amyloid_present.bib
@@ -777,3 +777,18 @@ URL = {http://bioinformatics.oxfordjournals.org/content/30/11/1522.abstract},
 eprint = {http://bioinformatics.oxfordjournals.org/content/30/11/1522.full.pdf+html}, 
 journal = {Bioinformatics} 
 }
+
+
+@Article{kotulska2014,
+AUTHOR = {Gasior, Pawel and Kotulska, Malgorzata},
+TITLE = {FISH Amyloid - a new method for finding amyloidogenic segments in proteins based on site specific co-occurence of aminoacids},
+JOURNAL = {BMC Bioinformatics},
+VOLUME = {15},
+YEAR = {2014},
+NUMBER = {1},
+PAGES = {54},
+URL = {http://www.biomedcentral.com/1471-2105/15/54},
+DOI = {10.1186/1471-2105-15-54},
+PubMedID = {24564523},
+ISSN = {1471-2105}
+}
