--- a/presentation.Rnw
+++ b/presentation.Rnw
@@ -128,6 +128,7 @@ theme_presentation <- theme(plot.background=element_rect(fill = "transparent",
                       legend.text = element_text(size=9), 
                       legend.title = element_text(size=13),
                       plot.title = element_text(size=20),
+                      panel.grid.major = element_line(colour="lightgrey", linetype = "dashed"),
                       panel.background = element_rect(fill = "transparent",colour = "black"),
                       legend.background = element_rect(fill="NA"))
 
@@ -326,19 +327,19 @@ Istnieje szereg programów przewidujących występowanie peptydu sygnałowego:
 \item signalP 4.1 (sieci neuronowe)~\citep{petersen_signalp_2011},
 \item PrediSi (Position Weight Matrix)~\citep{hiller_predisi:_2004},
 \item Signal-3L (k-najbliszych sąsiadów)~\citep{shen_signal-3l:_2007},
-\item Phobius (ukryte modele Markowa)~\citep{kall_combined_2004}.
+\item Phobius (ukryte modele Markowskie)~\citep{kall_combined_2004}.
 \end{itemize}
 
 \end{frame}
 
-\subsection{Ukryte modele semi-Markowa}
+\subsection{Ukryte modele semi-Markowskie}
 
 
 \begin{frame}
       Założenia modelu:
       \begin{itemize}
         \item obserwowany rozkład aminokasów jest wynika z przebywania w określonym regionie (stanie),
-        \item długość regionu (czas trwania stanu) jest modelowana poprzez rozkład prawdopodobieństwa (inny niż rozkład geometryczny jak w ukrytych modelach Markowa).
+        \item długość regionu (czas trwania stanu) jest modelowana poprzez rozkład prawdopodobieństwa (inny niż rozkład geometryczny jak w ukrytych modelach Markowskich).
       \end{itemize}
     \end{frame}
 
@@ -383,8 +384,69 @@ Istnieje szereg programów przewidujących występowanie peptydu sygnałowego:
 
     \end{frame}
 
+\subsection{Porównanie z innymi programami}
+
+\begin{frame}
+    Zbiór danych do analizy porównawczej: 140 eukariotycznych białek z peptydem sygnałowym i 280 losowo wybranych eukariotycznych bialek bez peptydu sygnałowego dodanych po 2010 do bazy UniProt.
+    
+    \vspace{.5cm}
+    
+    signal.hsmm1987: wytrenowany na zbiorze 496 eukariotycznych białek z peptydem sygnałowym dodanych do bazy przed 1987.
+    
+    \vspace{.5cm}
+    
+    signal.hsmm2010: wytrenowany na zbiorze 3676 eukariotycznych białek z peptydem sygnałowym dodanych do bazy przed 2010.
+    \end{frame}
 
 
+
+    \begin{frame}
+      \begin{table}[ht]
+\centering
+\begin{tabular}{rcccc}
+  \hline
+ & AUC & H-measure & Gini index\\ 
+  \hline
+Phobius & 0.9643 & 0.8844 & 0.9286\\ 
+  PrediSi & 0.9411 & 0.8238 & 0.8821\\ 
+  signalP 4.1 (no tm) & 0.9679 & 0.8909 & 0.9357\\ 
+  signalP 4.1 (tm) & 0.9750 & 0.9261 & 0.9500\\ 
+  signalhsmm2010 & 0.9893 & 0.8963 & 0.9786\\ 
+  signalhsmm1987 & 0.9889 & 0.8994 & 0.9778\\ 
+   \hline
+\end{tabular}
+\end{table}
+    \end{frame}
+
+
+\section{Amyloidy}
+
+\subsection{Zbiór danych}
+
+\begin{frame}
+
+Zbiór danych: 146 amyloidów i 290 nieamyloidów~\citep{kotulska2014}.
+
+<<echo = FALSE,message=FALSE,results='asis',fig.height=4.8>>=
+load("amyloid_seqs.RData")
+
+nice_tar <- rf_dat[, 11]
+levels(nice_tar) <- c("nie", "tak")
+
+lenghts <- data.frame(len = as.factor(10 - apply(rf_dat[, -11], 1, function(i) sum(is.na(i)))),
+                      Amyloid = nice_tar)
+
+ggplot(lenghts, aes(x = len, fill = Amyloid)) + 
+  geom_bar(position = "dodge") +
+  scale_x_discrete("Długość peptydu") +
+  scale_y_continuous("Liczba peptydów") +
+  scale_fill_hue(l=70, c=150) +
+  theme_presentation
+
+@
+
+
+\end{frame}
 
 \begin{frame}
 
