--- a/presentation.Rnw
+++ b/presentation.Rnw
@@ -444,8 +444,6 @@ ggplot(lenghts, aes(x = len, fill = Amyloid)) +
 
 
 <<echo = FALSE,message=FALSE,results='asis',fig.height=5.5>>=
-
-#table is wrong here, we should also divide by the length of sequence
 unis <- table_ngrams(as.matrix(rf_dat[, -11]), paste0(create_ngrams(1, a()[-1]), "_0"), target = as.numeric(rf_dat[, 11]) - 1)
 munis <- melt(unis)
 levels(munis[, "ngram"]) <- substr(levels(munis[, "ngram"]), 0, 1)
@@ -466,8 +464,15 @@ ggplot(munis, aes(x = ngram, fill = variable, y = value)) +
 
 <<echo = FALSE,message=FALSE,results='asis',fig.height=5.5>>=
 unis <- table_ngrams(as.matrix(rf_dat[, -11]), paste0(create_ngrams(1, a()[-1]), "_0"), target = as.numeric(rf_dat[, 11]) - 1)
+
+lengths <- 10 - apply(rf_dat[, -11], 1, function(i) sum(is.na(i)))
+
+sapply(levels(rf_dat[, 11]), function(i) sum(lengths[rf_dat[, 11] == i]))
+
 munis <- melt(unis)
 levels(munis[, "ngram"]) <- substr(levels(munis[, "ngram"]), 0, 1)
+
+
 #munis[, "ngram"] <- factor(munis[, "ngram"], levels = levels(munis[, "ngram"])[order(abs(unis[, "target0"] - unis[, "target1"]), decreasing = TRUE)])
 levels(munis[, "variable"]) <- c("nie", "tak")
 ggplot(munis, aes(x = ngram, fill = variable, y = value)) + 
@@ -481,6 +486,8 @@ ggplot(munis, aes(x = ngram, fill = variable, y = value)) +
 \end{frame}
 
 
+
+\end{frame}
 
 \begin{frame}
 
