--- a/presentation.Rnw
+++ b/presentation.Rnw
@@ -92,14 +92,14 @@ library(seqinr)
 theme_presentation <- theme(plot.background=element_rect(fill = "transparent",
                                                    colour = "transparent"),
                       plot.margin = unit(c(1,1,1,1), "cm"),
-                      axis.text.x = element_text(size=8), 
-                      axis.text.y = element_text(size=8),
-                      axis.title.x = element_text(size=12, vjust = -1), 
-                      axis.title.y = element_text(size=12, vjust = 1),
-                      strip.text = element_text(size=12),
-                      legend.text = element_text(size=8), 
-                      legend.title = element_text(size=12),
-                      plot.title = element_text(size=19),
+                      axis.text.x = element_text(size=7), 
+                      axis.text.y = element_text(size=7),
+                      axis.title.x = element_text(size=11, vjust = -1), 
+                      axis.title.y = element_text(size=11, vjust = 1),
+                      strip.text = element_text(size=11),
+                      legend.text = element_text(size=7), 
+                      legend.title = element_text(size=11),
+                      plot.title = element_text(size=18),
                       panel.grid.major = element_line(colour="lightgrey", linetype = "dashed"),
                       panel.background = element_rect(fill = "transparent",colour = "black"),
                       legend.background = element_rect(fill="NA"))
@@ -492,6 +492,36 @@ ggplot(munis, aes(x = ngram, fill = variable, y = value)) +
 
 \begin{frame}
 
+\begin{itemize}
+\item Duże różnice w częstościach aminokwasów pozwalają na użycie n-gramów.
+\item Nierówne długości peptydów wykluczają użycie n-gramów z informacją o pozycji.
+\end{itemize}
+
+\end{frame}
+
+
+
+\subsection{Analiza n-gramów}
+
+\begin{frame}
+%czy możemy binaryzowac n-gramy?
+<<echo = FALSE,message=FALSE,warning=FALSE,results='asis',fig.height=5.5>>=
+load("final_plot_dat.RData")
+ggplot(final_plot_dat, aes(x = x, y = y, col = Binaryzacja, fill = Binaryzacja)) +
+  geom_line() +
+  scale_x_continuous("TPR") + 
+  scale_y_continuous("TFR") +
+  geom_point(size=2, shape=21, alpha = 0.5) +
+  facet_wrap(~ dists) +
+  theme_presentation +
+  theme(legend.position="bottom")
+@
+
+\end{frame}
+
+
+\begin{frame}
+
 <<echo = FALSE,message=FALSE,warning=FALSE,results='asis',fig.height=5.5>>=
 
 bigrams <- cbind(as.matrix(count_ngrams(as.matrix(rf_dat[, -11]), 2, a()[-1], d = 0)),
@@ -528,8 +558,6 @@ ggplot(mbis, aes(x = ngram, fill = variable, y = value)) +
 
 \end{frame}
 
-
-\end{frame}
 
 \begin{frame}
 
